--- a/index.html
+++ b/index.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>Bali</title>
-     <link rel="stylesheet" href="fonts.css">
-     <link rel="stylesheet" href="styles.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bali</title>
+	<link rel="stylesheet" href="fonts.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="wrapper">
-   <header class="header">
-   <div class="logo">
-       </div>
-   <div class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle">
-      <span></span>
-    </label>
-      <ul class="menu__box">
-        <li><a class="menu__item" href="#">start</a></li>
-        <li><a class="menu__item" href="#">services</a></li>
-        <li><a class="menu__item" href="#">about</a></li>
-        <li><a class="menu__item" href="#">blog</a></li>
-        <li><a class="menu__item" href="#">contact us</a></li>
-      </ul>
-  </div>
-   <nav class="menu">
-     <a class="menu__item" href='#'>start</a>
-     <a class="menu__item menu__item_active" href='#'>services</a>
-     <a class="menu__item" href='#'>about</a>
-     <a class="menu__item" href='#'>blog</a>
-     <a class="menu__item" href='#'>contact us</a>
-   </nav> 
+	<div class="wrapper">
+	<header class="header">
+	 <div class="logo" src="img/img.png" alt="логотип"></div>
+	</div>
+	 <nav class="menu">
+		<a class="menu__item" href='#'>start</a>
+		<a class="menu__item" href='#'>services</a>
+		<a class="menu__item" href='#'>about</a>
+		<a class="menu__item" href='#'>blog</a>
+		<a class="menu__item" href='#'>contact us</a>
+	 </nav> 
  </header>
  <section class="main">
-     <h1 class="main__title">Building an App <span class="main__title-text_highlight">Without Design Expertise?</span></h1>
-     <p class="main__subtitle">i help tech startups desing better digital products without hiring a full-time designer</p>
-     <a class="main__button" href="#">Schedule free consultation</a>
+		<h1 class="main__title">Bali</h1>
+		<h2 class="main__title-text">Indonesia</h2>
+		<p class="main__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuda centers, and activities.</p>
+		<a class="main__button" href="#">Book travel</a>
+ </section>
+ <section class="img">
+    <img class="img__pic" src="img/img1.png" alt="">
+    <img class="img__pic" src="img/img2.png" alt="">
+    <img class="img__pic" src="img/img3.png" alt="">
  </section>
 </div>
 </body>
