new text in index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class="wrapper">
-	<header class="header">
+<div class="wrapper">
+<header class="header">
 	 <div class="logo" src="img/img.png" alt="логотип"></div>
 	</div>
 	 <nav class="menu">
@@ -19,7 +19,7 @@
 		<a class="menu__item" href='#'>blog</a>
 		<a class="menu__item" href='#'>contact us</a>
 	 </nav> 
- </header>
+</header>
  <section class="main">
 		<h1 class="main__title">Bali</h1>
 		<h2 class="main__title-text">Indonesia</h2>
@@ -27,9 +27,9 @@
 		<a class="main__button" href="#">Book travel</a>
  </section>
  <section class="img">
-    <img class="img__pic" src="img/img1.png" alt="">
-    <img class="img__pic" src="img/img2.png" alt="">
-    <img class="img__pic" src="img/img3.png" alt="">
+    <img class="img__pic" src="img/img1.png" alt="1">
+    <img class="img__pic" src="img/img2.png" alt="2">
+    <img class="img__pic" src="img/img3.png" alt="3">
  </section>
 </div>
 </body>
