--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
  <section class="main">
 		<h1 class="main__title">Bali</h1>
-		<h2 class="main__title-text">Indonesia</h2>
+		<h2 class="main__title_text">Indonesia</h2>
 		<p class="main__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuda centers, and activities.</p>
 		<a class="main__button" href="#">Book travel</a>
  </section>
