new text in styles.css

--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="wrapper">
-<header class="header">
-	 <div class="logo" src="img/img.png" alt="логотип"></div>
-	</div>
+ <div class="wrapper">
+ <header class="header">
+  <div class="logo" src="img/img.png" alt="логотип"></div>
 	 <nav class="menu">
-		<a class="menu__item" href='#'>start</a>
-		<a class="menu__item" href='#'>services</a>
-		<a class="menu__item" href='#'>about</a>
-		<a class="menu__item" href='#'>blog</a>
-		<a class="menu__item" href='#'>contact us</a>
+		<a class="menu__item" href='#'>Start</a>
+		<a class="menu__item" href='#'>Services</a>
+		<a class="menu__item" href='#'>About</a>
+		<a class="menu__item" href='#'>Blog</a>
+		<a class="menu__item" href='#'>Contact us</a>
 	 </nav> 
 </header>
  <section class="main">
@@ -27,9 +26,9 @@
 		<a class="main__button" href="#">Book travel</a>
  </section>
  <section class="img">
-    <img class="img__pic" src="img/img1.png" alt="1">
-    <img class="img__pic" src="img/img2.png" alt="2">
-    <img class="img__pic" src="img/img3.png" alt="3">
+    <img class="img__pic1" src="img/img.png" alt="">
+    <img class="img__pic2" src="img/img.png" alt="">
+    <img class="img__pic3" src="img/img.png" alt="">
  </section>
 </div>
 </body>
