new text in styles.css

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<a class="main__button" href="#">Book travel</a>
  </section>
  <section class="img">
-    <img class="img__pic1" src="img/img.png" alt="">
-    <img class="img__pic2" src="img/img.png" alt="">
-    <img class="img__pic3" src="img/img.png" alt="">
+    <img class="img__pic1" src="img/logo2.png" alt="">
+    <img class="img__pic2" src="img/logo3.png" alt="">
+    <img class="img__pic3" src="img/logo4.png" alt="">
  </section>
 </div>
 </body>
