--- a/index.html
+++ b/index.html
@@ -32,16 +32,20 @@
 		<a class="menu__item" href='#'>Contact us</a>
 	 </nav> 
 </header>
- <section class="main">
-		<h1 class="main__title">Bali</h1>
-		<h2 class="main__title_text">Indonesia</h2>
-		<p class="main__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuda centers, and activities.</p>
+ <section class="information">
+ <div class="main">
+ 	<div class="main_text">
+		<p class="main__title">Bali</p>
+		<p class="main__subtitle">Indonesia</p>
+	</div>
+		<p class="main__description">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuda centers, and activities.</p>
 		<a class="main__button" href="#">Book travel</a>
- </section>
- <section class="img">
-    <img class="img__pic1" src="img/logo2.png" alt="">
-    <img class="img__pic2" src="img/logo3.png" alt="">
-    <img class="img__pic3" src="img/logo4.png" alt="">
+	</div>
+ <div class="img">
+ 	<div class="img__picture img__picture_active img__picture_first"></div>
+ 	<div class="img__picture img__picture_second"></div>
+ 	<div class="img__picture img__picture_third"></div>	
+  </div>
  </section>
 </div>
 </body>
