new text in styles.css

--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
  <div class="main">
  	<div class="main_text">
 		<p class="main__title">Bali</p>
-		<p class="main__subtitle">Indonesia</p>
 	</div>
 		<p class="main__description">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuda centers, and activities.</p>
 		<a class="main__button" href="#">Book travel</a>
 	</div>
  <div class="img">
- 	<div class="img__picture img__picture_active img__picture_first"></div>
- 	<div class="img__picture img__picture_second"></div>
- 	<div class="img__picture img__picture_third"></div>	
+ 	<div class="img__picture"></div>
+ 	<div class="img__picture"></div>
+ 	<div class="img__picture"></div>	
   </div>
  </section>
 </div>
